--- a/app-cluster/springkotlin-dev.yml
+++ b/app-cluster/springkotlin-dev.yml
@@ -1,8 +1,8 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: springkotlin-dev
+  name: springkotlin-infra
   namespace: flux-system
 spec:
   interval: 1m0s
@@ -11,5 +11,3 @@ spec:
   sourceRef:
     kind: GitRepository
     name: springkotlin-infra
-  timeout: 2m0s
-  validation: client
